# Centralized-IoT-Pipeline

./: README.md
PythonApplication1/: iot-sentinel.pyproj  iot-sentinel.sln
iot-sentinel/: .gitignore  README.md  docker-compose.yml  iot-sentinel.pyproj  pyproject.toml
iot-sentinel/docker/: docker-compose.yml
iot-sentinel/docker/mosquitto/config/: mosquitto.conf
iot-sentinel/docker/mosquitto/data/: mosquitto.db  randomData.json
iot-sentinel/mosquitto/config/: mosquitto.conf
iot-sentinel/src/models/: baseModel.py
iot-sentinel/src/pipeline/: Helper_Config.py
iot-sentinel/test/: test_connections.py  tests_module.py
